--- a/styles.css
+++ b/styles.css
@@ -191,6 +191,7 @@ body {
             color: #3f434a;
             font-weight: bold;
             position: relative;
+
             img{
                 margin-left: 5px; 
                 width: 16px; 
@@ -217,7 +218,12 @@ body {
             filter: brightness(0) saturate(30%) invert(30%) sepia(3%) saturate(0%) hue-rotate(150deg);  
         }
         
+        .menu-item a{
+            text-decoration: none;
+            font-size: 13px;
+            color: rgb(128, 128, 128);
 
+        }
         
 
         
